--- a/src/非vue/pages/square/guangchang.html
+++ b/src/非vue/pages/square/guangchang.html
@@ -1,187 +1,226 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>广场页</title>
+    <link rel="stylesheet" href="../../pages/square/guangchang.css" />
+    <link rel="stylesheet" href="../../css/base.css" />
+    <link rel="stylesheet" href="../../css/menu.css" />
+    <link rel="stylesheet" href="../../css/page.css" />
+    <link rel="stylesheet" href="../../css/zylb.css" />
+    <link rel="shortcut icon" href=".../../images/启动图标.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>广场页</title>
-  <link rel="stylesheet" href="../../pages/square/guangchang.css">
-  <link rel="stylesheet" href="../../css/base.css">
-  <link rel="stylesheet" href="../../css/menu.css">
-  <link rel="stylesheet" href="../../css/page.css">
-  <link rel="stylesheet" href="../../css/zylb.css">
-  <link rel="shortcut icon" href=".../../images/启动图标.png">
-</head>
+  <body>
+    <a href="../../index.html">
+      <iconpark-icon name="home" class="home-icon"></iconpark-icon>
+    </a>
 
-<body>
-
-
-  <a href="../../index.html">
-    <iconpark-icon name="home" class="home-icon"></iconpark-icon>
-  </a>
-
-  <div class="page">
-
-    <!-- 画布 -->
-    <div class="canvas">
-      <div class="phone">
-        <div class="top">
-          <img src="../../images/广场页/状态栏.png" />
-          <div class="navigationBar">
-            <img class="logo" src="../../images/广场页/叫叫 Logo - 基础.png" alt="">
-            <img class="scan" src="../../images/广场页/扫一扫.png" alt="">
+    <div class="page">
+      <!-- 画布 -->
+      <div class="canvas">
+        <div class="phone">
+          <div class="top">
+            <img src="../../images/广场页/状态栏.png" />
+            <div class="navigationBar">
+              <img
+                class="logo"
+                src="../../images/广场页/叫叫 Logo - 基础.png"
+                alt=""
+              />
+              <img class="scan" src="../../images/广场页/扫一扫.png" alt="" />
+            </div>
           </div>
+          <div class="neirong">
+            <div class="subject">
+              <div class="km s1">
+                <img src="../../images/科目图标/阅读.png" />
+                <span>阅读</span>
+              </div>
+              <div class="km s2">
+                <img src="../../images/科目图标/益智.png" />
+                <span class="font_3 text_10 mt-3">益智</span>
+              </div>
+              <div class="km s3">
+                <img src="../../images/科目图标/美育.png" />
+                <span class="font_3 text_11 mt-3">美育</span>
+              </div>
+              <div class="km s4">
+                <img src="../../images/科目图标/写作.png" />
+                <span class="font_3 text_12 mt-3">写作</span>
+              </div>
+              <div class="km s5">
+                <img src="../../images/科目图标/英语.png" />
+                <span class="font_3 text_13 mt-3">英语</span>
+              </div>
+            </div>
+            <div class="bigBanner">
+              <img
+                class="background-image"
+                src="../../images/banner_背景图.png"
+                alt="Background Image"
+              />
+              <img
+                class="foreground-image"
+                src="../../images/banner_前景图.png"
+                alt="Foreground Image"
+              />
+            </div>
+            <div class="miniBanner">
+              <img class="miniBannerFirst" src="../../images/小banner/Property
+              1=01.png" / alt="Mini Banner">
+              <img src="../../images/小banner/Property 1=02.png" />
+              <img src="../../images/小banner/Property 1=03.png" />
+            </div>
+            <div class="other">
+              <img src="../../images/内容/内容.png" />
+            </div>
+          </div>
+
+          <img class="tabBar" src="../../images/广场页/底部标签栏.png" />
         </div>
-        <div class="neirong">
-          <div class="subject">
-            <div class="km s1">
-              <img src="../../images/科目图标/阅读.png" />
-              <span>阅读</span>
-            </div>
-            <div class="km s2">
-              <img src="../../images/科目图标/益智.png" />
-              <span class="font_3 text_10 mt-3">益智</span>
-            </div>
-            <div class="km s3">
-              <img src="../../images/科目图标/美育.png" />
-              <span class="font_3 text_11 mt-3">美育</span>
-            </div>
-            <div class="km s4">
-              <img src="../../images/科目图标/写作.png" />
-              <span class="font_3 text_12 mt-3">写作</span>
-            </div>
-            <div class="km s5">
-              <img src="../../images/科目图标/英语.png" />
-              <span class="font_3 text_13 mt-3">英语</span>
+        <div class="pad">
+          <div class="top">
+            <img src="../../images/广场页/状态栏_pad.png" />
+            <div class="navigationBar">
+              <img
+                class="logo"
+                src="../../images/广场页/叫叫 Logo - 基础.png"
+                alt=""
+              />
+              <img class="scan" src="../../images/广场页/扫一扫.png" alt="" />
             </div>
           </div>
-          <div class="bigBanner">
-            <img class="background-image" src="../../images/banner_背景图.png" alt="Background Image">
-            <img class="foreground-image" src="../../images/banner_前景图.png" alt="Foreground Image">
+          <div class="neirong">
+            <div class="subject">
+              <div class="km s1">
+                <img src="../../images/科目图标/阅读.png" />
+                <span>阅读</span>
+              </div>
+              <div class="km s2">
+                <img src="../../images/科目图标/益智.png" />
+                <span class="font_3 text_10 mt-3">益智</span>
+              </div>
+              <div class="km s3">
+                <img src="../../images/科目图标/美育.png" />
+                <span class="font_3 text_11 mt-3">美育</span>
+              </div>
+              <div class="km s4">
+                <img src="../../images/科目图标/写作.png" />
+                <span class="font_3 text_12 mt-3">写作</span>
+              </div>
+              <div class="km s5">
+                <img src="../../images/科目图标/英语.png" />
+                <span class="font_3 text_13 mt-3">英语</span>
+              </div>
+            </div>
+            <div class="bigBanner">
+              <img
+                class="background-image"
+                src="../../images/banner_背景图.png"
+                alt="Background Image"
+              />
+              <img
+                class="foreground-image"
+                src="../../images/banner_前景图.png"
+                alt="Foreground Image"
+              />
+            </div>
+            <div class="miniBanner">
+              <img class="miniBannerFirst" src="../../images/小banner/Property
+              1=01.png" / alt="Mini Banner">
+              <img src="../../images/小banner/Property 1=02.png" />
+              <img src="../../images/小banner/Property 1=03.png" />
+              <img src="../../images/小banner/Property 1=04.png" />
+              <img src="../../images/小banner/Property 1=05.png" />
+            </div>
+            <div class="other">
+              <img src="../../images/内容/pad内容占位.png" />
+            </div>
           </div>
-          <div class="miniBanner">
-            <img class="miniBannerFirst" src="../../images/小banner/Property 1=01.png" / alt="Mini Banner">
-            <img src="../../images/小banner/Property 1=02.png" />
-            <img src="../../images/小banner/Property 1=03.png" />
-          </div>
-          <div class="other">
-            <img src="../../images/内容/内容.png" />
-          </div>
+          <img class="tabBar" src="../../images/广场页/底部标签栏_pad.png" />
         </div>
-
-        <img class="tabBar" src="../../images/广场页/底部标签栏.png">
-
       </div>
-      <div class=" pad">
-        <div class="top">
-          <img src="../../images/广场页/状态栏_pad.png" />
-          <div class="navigationBar">
-            <img class="logo" src="../../images/广场页/叫叫 Logo - 基础.png" alt="">
-            <img class="scan" src="../../images/广场页/扫一扫.png" alt="">
+      <!-- 资源清单 -->
+      <div class="menu">
+        <div class="title"><span>资源列表</span></div>
+        <div class="resources">
+          <div class="list">
+            <div class="zyname">
+              <span>大banner前景图</span>
+              <a
+                href="https://alidocs.dingtalk.com/i/nodes/mExel2BLV54K0MnQCxk2Pq2wWgk9rpMq?utm_scene=team_space"
+                target="_blank"
+                ><iconpark-icon name="help"></iconpark-icon
+              ></a>
+            </div>
+            <button class="button_line" id="uploadForegroundButton">
+              <iconpark-icon name="upload"></iconpark-icon>
+              <span>上传</span>
+            </button>
+            <input
+              type="file"
+              id="fileInputForeground"
+              accept="image/*"
+              style="display: none"
+            />
+          </div>
+          <div class="list">
+            <div class="zyname">
+              <span>大banner背景图</span>
+              <a
+                href="https://alidocs.dingtalk.com/i/nodes/mExel2BLV54K0MnQCxk2Pq2wWgk9rpMq?utm_scene=team_space"
+                target="_blank"
+                ><iconpark-icon name="help"></iconpark-icon
+              ></a>
+            </div>
+            <button class="button_line" id="uploadBackgroundButton">
+              <iconpark-icon name="upload"></iconpark-icon>
+              <span>上传</span>
+            </button>
+            <input
+              type="file"
+              id="fileInputBackground"
+              accept="image/*"
+              style="display: none"
+            />
+          </div>
+
+          <div class="list">
+            <div class="zyname">
+              <span>小banner</span>
+              <a
+                href="https://alidocs.dingtalk.com/i/nodes/gwva2dxOW4KX7gmQCQN1X2oz8bkz3BRL?utm_scene=team_space"
+                target="_blank"
+                ><iconpark-icon name="help"></iconpark-icon
+              ></a>
+            </div>
+            <button class="button_line" id="uploadMiniBannerButton">
+              <iconpark-icon name="upload"></iconpark-icon>
+              <span>上传</span>
+            </button>
+            <input
+              type="file"
+              id="fileInputMiniBanner"
+              accept="image/*"
+              style="display: none"
+            />
           </div>
         </div>
-        <div class="neirong">
-          <div class="subject">
-            <div class="km s1">
-              <img src="../../images/科目图标/阅读.png" />
-              <span>阅读</span>
-            </div>
-            <div class="km s2">
-              <img src="../../images/科目图标/益智.png" />
-              <span class="font_3 text_10 mt-3">益智</span>
-            </div>
-            <div class="km s3">
-              <img src="../../images/科目图标/美育.png" />
-              <span class="font_3 text_11 mt-3">美育</span>
-            </div>
-            <div class="km s4">
-              <img src="../../images/科目图标/写作.png" />
-              <span class="font_3 text_12 mt-3">写作</span>
-            </div>
-            <div class="km s5">
-              <img src="../../images/科目图标/英语.png" />
-              <span class="font_3 text_13 mt-3">英语</span>
-            </div>
-          </div>
-          <div class="bigBanner">
-            <img class="background-image" src="../../images/banner_背景图.png" alt="Background Image">
-            <img class="foreground-image" src="../../images/banner_前景图.png" alt="Foreground Image">
-          </div>
-          <div class="miniBanner">
-            <img class="miniBannerFirst" src="../../images/小banner/Property 1=01.png" / alt="Mini Banner">
-            <img src="../../images/小banner/Property 1=02.png" />
-            <img src="../../images/小banner/Property 1=03.png" />
-            <img src="../../images/小banner/Property 1=04.png" />
-            <img src="../../images/小banner/Property 1=05.png" />
-          </div>
-          <div class="other">
-            <img src="../../images/内容/pad内容占位.png" />
-          </div>
-        </div>
-        <img class="tabBar" src="../../images/广场页/底部标签栏_pad.png" />
       </div>
     </div>
-    <!-- 资源清单 -->
-    <div class="menu">
-      <div class="title"><span>资源列表</span></div>
-      <div class="resources">
 
-        <div class="list">
-          <div class="zyname">
-            <span>大banner前景图</span>
-            <a href="https://alidocs.dingtalk.com/i/nodes/mExel2BLV54K0MnQCxk2Pq2wWgk9rpMq?utm_scene=team_space"
-              target="_blank"><iconpark-icon name="help"></iconpark-icon></a>
-          </div>
-          <button class="button_line" id="uploadForegroundButton">
-            <iconpark-icon name="upload"></iconpark-icon>
-            <span>上传</span>
-          </button>
-          <input type="file" id="fileInputForeground" accept="image/*" style="display: none;">
-        </div>
-        <div class="list">
-          <div class="zyname">
-            <span>大banner背景图</span>
-            <a href="https://alidocs.dingtalk.com/i/nodes/mExel2BLV54K0MnQCxk2Pq2wWgk9rpMq?utm_scene=team_space"
-              target="_blank"><iconpark-icon name="help"></iconpark-icon></a>
-          </div>
-          <button class="button_line" id="uploadBackgroundButton">
-            <iconpark-icon name="upload"></iconpark-icon>
-            <span>上传</span>
-          </button>
-          <input type="file" id="fileInputBackground" accept="image/*" style="display: none;">
-        </div>
+    <!-- 调用图标库 -->
+    <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_32441_9.52a92dbd4723cbb8b9447abd54bdee4a.js"></script>
 
-        <div class="list">
-          <div class="zyname">
-            <span>小banner</span>
-            <a href="https://alidocs.dingtalk.com/i/nodes/gwva2dxOW4KX7gmQCQN1X2oz8bkz3BRL?utm_scene=team_space"
-              target="_blank"><iconpark-icon name="help"></iconpark-icon></a>
-          </div>
-          <button class="button_line" id="uploadMiniBannerButton">
-            <iconpark-icon name="upload"></iconpark-icon>
-            <span>上传</span>
-          </button>
-          <input type="file" id="fileInputMiniBanner" accept="image/*" style="display: none;">
-        </div>
+    <!-- 调用尺寸检测函数 -->
+    <script src="/JavaScript/verification function.js"></script>
 
-      </div>
-    </div>
-  </div>
+    <script src="/JavaScript/menu.js"></script>
 
+    <script src="/JavaScript/scripts.js"></script>
 
-
-  <!-- 调用图标库 -->
-  <script
-    src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_32441_9.52a92dbd4723cbb8b9447abd54bdee4a.js"></script>
-
-  <!-- 调用尺寸检测函数 -->
-  <script src="/JavaScript/verification function.js"></script>
-
-  <script src="/JavaScript/menu.js"></script>
-
-  <script src="/JavaScript/scripts.js"></script>
-
-  <script src="/pages/square/guangchang.js"></script>
-</body>
-
+    <script src="/pages/square/guangchang.js"></script>
+  </body>
 </html>
