--- a/单HTML改造/pop-up.html
+++ b/单HTML改造/pop-up.html
@@ -602,13 +602,15 @@
       function autoFit() {
         const container = document.getElementById("preview-container");
         const stage = document.getElementById("presentation-stage");
+        const toolbar = document.querySelector('.absolute.top-6.left-1\\/2');
 
         // 重置缩放以获取真实尺寸
         stage.style.transform = "scale(1)";
 
-        // 获取容器尺寸 (减去padding)
+        // 获取容器尺寸 (减去padding和工具栏高度)
         const containerW = container.clientWidth - 60;
-        const containerH = container.clientHeight - 60;
+        const toolbarHeight = toolbar ? toolbar.offsetHeight + 48 : 80; // 工具栏高度 + 间距(顶部6 + 间距)
+        const containerH = container.clientHeight - 60 - toolbarHeight;
 
         // 计算内容尺寸
         let contentW = 0;
@@ -618,7 +620,7 @@
         const PHONE_W = 399; // 375 + border 24
         const PHONE_H = 836; // 812 + border 24
         const PAD_W = 1056; // 1024 + border 32
-        const PAD_H = 800; // 768 + border 32
+        const PAD_H = 836; // 修改为与手机高度一致
         const GAP = 40;
 
         if (currentMode === "compare") {
